objects/POCFnUseCase__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fit__c</fullName>
        <label>Fit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FnUseCase__c</fullName>
        <label>FnUseCase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CE01 - Inbound: Connect Voice Interaction to right resource</fullName>
                </value>
                <value>
                    <fullName>CE02 - Inbound: Personalized &amp; Value based Voice routing</fullName>
                </value>
                <value>
                    <fullName>CE03 - Inbound: Dynamic Voice Call Back</fullName>
                </value>
                <value>
                    <fullName>Inbound: Access Experts across the enterprise with Skype for Business</fullName>
                </value>
                <value>
                    <fullName>Inbound: Increase NPS while Managing Urgent Conversations</fullName>
                </value>
                <value>
                    <fullName>Inbound: Extend Mobile to Video Calls</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Effective Identification and Validation in IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Payment Capture in IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Personalized IVR</fullName>
                </value>
                <value>
                    <fullName>Self-Service: Extend IVR to Visual IVR</fullName>
                </value>
                <value>
                    <fullName>Outbound: Improve Telesales Success by Moving Beyond Cold Calling</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactively keep customers informed via SMS notifications</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactively keep customers informed via multi-channel with preference management</fullName>
                </value>
                <value>
                    <fullName>Outbound: Proactive contact based on customer context and journey</fullName>
                </value>
                <value>
                    <fullName>Outbound: Accelerate Payments Collected Using Multiple Channels</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interactions to Right Resources - E-mail</fullName>
                </value>
                <value>
                    <fullName>Digital: Automated Response Based on Content Analysis</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interaction to Right Resource - Chat</fullName>
                </value>
                <value>
                    <fullName>Digital: Implement Social Media in Your Contact Center</fullName>
                </value>
                <value>
                    <fullName>Digital: Personalized (cross-channel context) &amp; Value Based Routing for Digital Channels</fullName>
                </value>
                <value>
                    <fullName>Digital: Enable Intelligent Click-to-Call Option for Your Website or App</fullName>
                </value>
                <value>
                    <fullName>Digital: Enable Callback Option for Your Website or App</fullName>
                </value>
                <value>
                    <fullName>Digital: Monitor Customer Behavior on Your Website</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Chat for Sales</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Engagement with Chat or Callback</fullName>
                </value>
                <value>
                    <fullName>Digital: Proactive Live Assistance Across any Channel</fullName>
                </value>
                <value>
                    <fullName>Digital: Offer Voice or Chat Support for Web Co-browse Experience</fullName>
                </value>
                <value>
                    <fullName>Digital: Implement Knowledge Base Access for Self and Agent Assisted Interactions</fullName>
                </value>
                <value>
                    <fullName>Digital: Route Digital Interactions to Right Resource - SMS</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization: Optimize agent utilization for voice interactions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Usecases_Numbers__c</fullName>
        <label>Functional Usecases Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCEngagementRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Engagement Request</label>
        <referenceTo>POC_Engagement_Request__c</referenceTo>
        <relationshipLabel>POC FnUse Case</relationshipLabel>
        <relationshipName>POC_FnUse_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POC FnUse Case</label>
    <nameField>
        <label>POC FnUse Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC FnUse Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>